--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=project230505
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/DummyLevel.DummyLevel
+EditorStartupMap=/Game/Levels/Demo_Streets.Demo_Streets
 GameDefaultMap=/Game/Levels/DummyLevel.DummyLevel
 TransitionMap=
 bUseSplitscreen=True
