--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,6 +20,7 @@ r.Shadow.Virtual.Enable=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.PostProcessing.PropagateAlpha=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
