다른 튜토리얼 보자

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=project230505
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_GrassLab.L_GrassLab
-GameDefaultMap=/Game/Levels/DummyLevel.DummyLevel
+EditorStartupMap=/Game/Levels/L_PCGLab.L_PCGLab
+GameDefaultMap=/Game/Levels/Demo_Streets.Demo_Streets
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
