무언가 잘못됨

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,6 +21,7 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.PostProcessing.PropagateAlpha=1
+r.RayTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
