--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,6 +22,10 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.PostProcessing.PropagateAlpha=1
 r.RayTracing=False
+r.SkinCache.CompileShaders=True
+r.RayTracing.Skylight=False
+r.RayTracing.Shadows=False
+r.PathTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
