--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,6 +26,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing.Skylight=False
 r.RayTracing.Shadows=False
 r.PathTracing=False
+r.Lumen.HardwareRayTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
