--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,7 +16,7 @@ r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -27,6 +27,9 @@ r.RayTracing.Skylight=False
 r.RayTracing.Shadows=False
 r.PathTracing=False
 r.Lumen.HardwareRayTracing=False
+r.Shaders.CompressionFormat=2
+r.DefaultFeature.MotionBlur=True
+r.DistanceFields.DefaultVoxelDensity=0.200000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
