--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,6 +30,7 @@ r.Lumen.HardwareRayTracing=False
 r.Shaders.CompressionFormat=2
 r.DefaultFeature.MotionBlur=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
