--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,7 @@ r.Shaders.CompressionFormat=2
 r.DefaultFeature.MotionBlur=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.CustomDepth=3
+r.VirtualTextures=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
