--- a/project230505.uproject
+++ b/project230505.uproject
@@ -24,6 +24,10 @@
 			"Name": "AdvancedFlockSystem",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/4e0c3b65a03046a290403b326dbb3428"
+		},
+		{
+			"Name": "WaveformEditor",
+			"Enabled": true
 		}
 	]
 }
