텍스쳐그래프의 저장은 지 맘대로다

--- a/project230505.uproject
+++ b/project230505.uproject
@@ -37,6 +37,13 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "TextureGraph",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64"
+			]
 		}
 	]
 }
